syntax = "proto3";

package dns;

option go_package = "./pb";

service DnsService {
    rpc SendDnsRequest (DnsRequest) returns (DnsResponse);
    rpc BlockIp(BlockIpRequest) returns (BlockIpResponse);
}

message DnsRequest {
    string ip_address = 1;
    string domain = 2;
    string query_type = 3;
    int64 timestamp = 4;
}

message DnsResponse {
    string status = 1;
}

message BlockIpRequest {
    string ip_address = 1;
}

message BlockIpResponse {
    string status = 1;
}